# liku

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: html-in-python.md  index.md  motivation.md  security.md  tailwindcss.md
docs/quickstart/: components.md  context.md  installation.md  integration.md
examples/django-htmx/: manage.py  requirements.txt
examples/django-htmx/blog/: apps.py  urls.py  views.py
examples/django-htmx/django_htmx/: asgi.py  settings.py  urls.py  wsgi.py
examples/flask-simple/: app.py  components.py  requirements.txt
examples/flask-simple-html/: app.py  components.py
html-in-python/: index.html
liku/: __init__.py  _utils.py  context.py  elements.py  htm.py  html.py  signatures.py
liku/integrations/: django.py  flask.py
motivation/: index.html
quickstart/components/: index.html
quickstart/context/: index.html
quickstart/installation/: index.html
quickstart/integration/: index.html
search/: search_index.json
security/: index.html
tailwindcss/: index.html
tests/: test_context.py  test_flask.py  test_html.py  test_html_string.py
